fixes start fave design on mobile

--- a/public/assets/css/startFave.less
+++ b/public/assets/css/startFave.less
@@ -57,7 +57,7 @@
       text-align: center;
       
       @media @mobile {
-        width: 70%;
+        width: 78%;
         margin: 40px auto 0 auto;
         display: block;
       }
@@ -145,14 +145,14 @@
                   //   height: 298px;
                   // }
                   @media @mobile {
-                    height: 350px;
+                    height: 293px;
                   }
                   
                   img{
                     width: 100%;
                     height: 24vh;
                     @media @mobile {
-                      height: 15vh;
+                      height: 12vh;
                     }
                   }
                 }
